Fixed the equals method.
Made several changes in this edition:
1. equals method was not checking for subset LHS
2. Removing one rule instead of 1/5 of rules on update
3. No longer adds duplicate rules